# sync-music

./: README.rst  pyproject.toml
sync_music/: sync_music.py  transcode.py
tests/: test_sync_music.py
